--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../Encriptador_de_textos/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../Encriptador_de_textos/img/Logo.png" alt="logo de aLura">    <!--img.logo, alt: sirve para informar al usuario el contenido de la imagen-->
+        <img class="logo" src="./img/Logo.png" alt="logo de aLura">    <!--img.logo, alt: sirve para informar al usuario el contenido de la imagen-->
     </header>
     <main>
         <section>
