--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Encriptador_de_textos/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">  <!--para referenciar: ./css/style.css...-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -43,6 +43,6 @@
             <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer"><img src="img/iconos/icon-LinkedIn.svg" alt="LinkedIn"></a>
         </div>
     </footer>
-<script src="/script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
