--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <img class="logo" src="./img/Logo.png" alt="logo de aLura">    <!--img.logo, alt: sirve para informar al usuario el contenido de la imagen-->
+       
     </header>
     <main>
         <section>
@@ -40,7 +41,7 @@
         <div class="redes">
             <h4>&copy Copyright Jack™ 2023</h4>
             <a href="https://github.com/Jsckbe" target="_blank" rel="noopener noreferrer"><img src="img/iconos/icon-GitHub.svg" alt="GitHub"></a>
-            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer"><img src="img/iconos/icon-LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/jack-bonzano/" target="_blank" rel="noopener noreferrer"><img src="img/iconos/icon-LinkedIn.svg" alt="LinkedIn"></a>
         </div>
     </footer>
 <script src="./script.js"></script>
